# arithmetic

./: .gitignore  CMakeLists.txt  README.md
arithmetic.xcodeproj/: project.pbxproj
arithmetic.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
arithmetic.xcodeproj/xcuserdata/alex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
header/: dichotomy.h  heap_sort.h  list_node.h  list_node.hpp  node.h  node.hpp  prefix_tree.h  skip_list.h  tree_node.h  tree_node.hpp  utils.h
leecode/: int_to_roman.c  letter_combinations.c  longest_common_prefix.c  max_area.c  three_sum.c  three_sum2.c  three_sum_closest.c
leetcode/: BST_from_preorder.cpp  BST_sequences.cpp  CBT_Inserter.c  add_one_row.c  all_possible_FBT.c  binary_tree_paths.cpp  btree_game_winning_move.c  build_tree.c  build_tree.cpp  can_partition.c  can_partition2.c  check_sub_tree.c  codec.cpp  combination_sum.c  combination_sum2.c  connect.c  construct_from_pre_post.c  countNodes.c  count_and_say.c  count_nodes.c  count_pairs.c  deepest_leaves_sum.c  del_nodes.c  delete_node.c  distribute_coins.c  divide.c  find_bottom_left_value.c  find_elements_create.c  find_frequent_tree_sum.cpp  find_redundant_connection.c  find_redundant_directed_connection.c  find_second_minimum_value.c  find_substring.c  find_substring2.c  first_missing_positive.c  flatten.c  flip_equiv.c  four_sum.c  generate_parenthesis.c  generate_trees.c  (+88 more)
leetcode/array/: ascals_triangle_ii.cpp  best-time-to-buy-and-sell-stock-iii.cpp  best-time-to-buy-and-sell-stock-iv.cpp  c-index-ii.cpp  c-index.cpp  can_jump.c  candy.c  check-if-matrix-is-x-matrix.cpp  combination-sum-iii.cpp  combine.cpp  contains-duplicate-ii.cpp  contains-duplicate-iii.cpp  contains-duplicate.cpp  count-primes.cpp  dungeon-game.cpp  encode-and-decode-tinyurl.cpp  evaluate-reverse-polish-notation.cpp  exist.cpp  find-minimum-in-rotated-sorted-array-ii.cpp  find-minimum-in-rotated-sorted-array.cpp  find-peak-element.cpp  find-the-duplicate-number.cpp  game-of-life.cpp  generate_matrix.c  house-robber-ii.cpp  house-robber.cpp  insert.cpp  integer-to-english-words.cpp  kth-largest-element-in-an-array.c  largest_rectangle_area.cpp  majority-element-ii.cpp  majority-element.cpp  max_profit.c  max_sub_array.c  maximal-square.cpp  maximal_rectangle.cpp  maximum-product-of-two-elements-in-an-array.c  maximum-product-subarray.cpp  merge.cpp  merge_sorted_array.c  (+32 more)
leetcode/greedy/: can_complete_circuit.c  find_content_children.cpp  is_subsequence.c  max_profit2.c
leetcode/linked_list/: add_two_numbers.c  add_two_numbers.cpp  copy_random_list.cpp  copy_random_list2.cpp  delete_duplicates.c  delete_duplicates2.c  delete_node.c  delete_node2.c  delete_node3.c  detect_cycle.c  detect_cycle2.c  flatten.cpp  front_middle_back_queue.cpp  get_decimal_value.c  get_intersection_node.c  get_intersection_node2.c  get_intersection_node3.c  get_kth_from_end.c  has_cycle.c  insertion_sort_list.cpp  is_palindrome.c  is_palindrome2.c  merge-in-between-linked-lists.cpp  merge_in_between.c  middle_node.c  my_linked_list.c  next_larger_nodes.c  next_larger_nodes.cpp  num_components.c  odd_even_list.c  partition.c  remove_duplicate_nodes.c  remove_elements.c  remove_zero_sum_sublists.cpp  reorder_list.cpp  reverse_between2.c  reverse_list.c  reverse_list2.c  reverse_print.c  rotate_right.c  (+4 more)
leetcode/math/: different-ways-to-add-parentheses.cpp  prime-arrangements.c
leetcode/string/: check-if-two-string-arrays-are-equivalent.cpp  count-asterisks.cpp  count-the-number-of-consistent-strings.cpp  decode-the-message.cpp  magical-string.cpp  minimum-changes-to-make-alternating-binary-string.cpp  orderly-queue.cpp  replace-words.cpp
leetcode/tree/: BST_from_preorder.cpp  BST_iterator.c  BST_sequences.cpp  BST_serialize.cpp  add-one-row-to-tree.c  add_one_row.c  average_of_levels.c  binary-tree-pruning.c  binary_tree_paths.cpp  btree_game_winning_move.c  build_tree.cpp  construct_maximum_binary_tree.c  convert_BST.c  delete_node.c  diameter_of_binary_tree.c  distance_k.c  distribute_coins.c  find_duplicate_subtrees.cpp  find_elements_create.c  find_frequent_tree_sum.cpp  find_mode.cpp  find_tilt.c  flip_match_voyage.cpp  get_all_elements.cpp  get_coprimes.cpp  get_target_copy.cpp  has_path_sum.c  inorder_traversal.c  insert_into_BST.c  insert_into_max_tree.c  is_even_odd_tree.cpp  is_same_tree.c  is_sub_path.c  is_symmetric.c  is_valid_BST.c  largest_values.cpp  leaf_similar.cpp  level_order.c  level_order2.cpp  list_of_depth.c  (+26 more)
test/: c++_hello_world.cpp  c_hello_world.c  find_different.c  recall.cpp  test.cpp  test_concurrent.c  test_file.c  test_fork.c  test_read_file.c  test_socket.c  test_thread.c
utils/: KMP.c  boyer_moore.c  create_list_util.c  dichotomy.c  hash_map.c  hash_map.h  heap_sort.c  my_lib.c  my_lib.h  node.h  prefix_tree.c  quick_sort.c  quick_sort.h  segment_tree.c  segment_tree.h  skip_list.c  string_util.c  string_util.h  sunday.c  tree_node.h  trie.c  utils.c
