cmake_minimum_required(VERSION 3.17)
project(arithmetic)

set(CMAKE_CXX_STANDARD 14)

include_directories(header)

add_executable(arithmetic
        header/dichotomy.h
        header/hash_map.h
        header/heap_sort.h
        header/list_node.h
        header/node.h
        header/node.hpp
        header/quick_sort.h
        header/segment_tree.h
        header/skip_list.h
        header/tree_node.h
        header/tree_node.hpp
        header/utils.h
        leetcode/add_one_row.c
        leetcode/all_possible_FBT.c
        leetcode/average_of_levels.c
        leetcode/binary_tree_paths.cpp
        leetcode/BST_from_preorder.cpp
        leetcode/BST_iterator.c
        leetcode/BST_sequences.cpp
        leetcode/BST_serialize.cpp
        leetcode/btree_game_winning_move.c
        leetcode/build_tree.c
        leetcode/build_tree.cpp
        leetcode/can_partition.c
        leetcode/can_partition2.c
        leetcode/CBT_Inserter.c
        leetcode/check_sub_tree.c
        leetcode/combination_sum.c
        leetcode/combination_sum2.c
        leetcode/connect.c
        leetcode/construct_from_pre_post.c
        leetcode/construct_maximum_binary_tree.c
        leetcode/convert_BST.c
        leetcode/count_and_say.c
        leetcode/count_pairs.c
        leetcode/deepest_leaves_sum.c
        leetcode/del_nodes.c
        leetcode/delete_node.c
        leetcode/diameter_of_binary_tree.c
        leetcode/distance_k.c
        leetcode/distribute_coins.c
        leetcode/divide.c
        leetcode/find_bottom_left_value.c
        leetcode/find_duplicate_subtrees.cpp
        leetcode/find_elements_create.c
        leetcode/find_redundant_directed_connection.c
        leetcode/find_second_minimum_value.c
        leetcode/find_substring.c
        leetcode/find_substring2.c
        leetcode/first_missing_positive.c
        leetcode/flatten.c
        leetcode/flip_equiv.c
        leetcode/four_sum.c
        leetcode/generate_parenthesis.c
        leetcode/generate_trees.c
        leetcode/get_all_elements.cpp
        leetcode/get_coprimes.cpp
        leetcode/get_target_copy.cpp
        leetcode/good_nodes.c
        leetcode/group_anagrams.c
        leetcode/has_path_sum.c
        leetcode/increasing_BST.c
        leetcode/inorder_successor.c
        leetcode/inorder_traversal.c
        leetcode/insert_into_BST.c
        leetcode/insert_into_max_tree.c
        leetcode/int_to_roman.c
        leetcode/is_balanced.c
        leetcode/is_balanced2.c
        leetcode/is_complete_tree.c
        leetcode/is_cousins.c
        leetcode/is_match.c
        leetcode/is_match2.c
        leetcode/is_match3.c
        leetcode/is_match4.c
        leetcode/is_palindrome.c
        leetcode/is_same_tree.c
        leetcode/is_sub_structure.c
        leetcode/is_symmetric.c
        leetcode/is_unival_tree.c
        leetcode/is_valid.c
        leetcode/is_valid_BST.c
        leetcode/is_valid_sudoku.c
        leetcode/jump.c
        leetcode/jump2.c
        leetcode/kth_largest.c
        leetcode/kth_smallest.c
        leetcode/largest_values.cpp
        leetcode/lca_deepest_leaves.c
        leetcode/leaf_similar.cpp
        leetcode/letter_combinations.c
        leetcode/level_order.c
        leetcode/level_order.cpp
        leetcode/list_of_depth.c
        leetcode/longest_common_prefix.c
        leetcode/longest_univalue_path.c
        leetcode/longest_valid_parentheses.c
        leetcode/longest_zig_zag.c
        leetcode/longest_zig_zag2.c
        leetcode/lowest_common_ancestor.c
        leetcode/max_ancestor_diff.c
        leetcode/max_area.c
        leetcode/max_depth.c
        leetcode/max_depth2.c
        leetcode/max_level_sum.c
        leetcode/max_path_sum.c
        leetcode/max_product.c
        leetcode/merge_k_lists.c
        leetcode/merge_trees.c
        leetcode/merge_two_lists.c
        leetcode/min_camera_cover.c
        leetcode/min_depth.c
        leetcode/min_diffIn_BST.c
        leetcode/min_distance.c
        leetcode/min_path_sum.c
        leetcode/min_reorder.c
        leetcode/min_time.c
        leetcode/mirror_tree.c
        leetcode/multiply.c
        leetcode/next_permutation.c
        leetcode/num_trees.c
        leetcode/path_sum.c
        leetcode/path_sum.cpp
        leetcode/pathIn_zig_zag_tree.cpp
        leetcode/permute.c
        leetcode/permute_unique.c
        leetcode/postorder.cpp
        leetcode/postorder_traversal.c
        leetcode/preorder.c
        leetcode/print_tree.c
        leetcode/prune_tree.c
        leetcode/range_sum_BST.c
        leetcode/recover_tree.cpp
        leetcode/remove_duplicates.c
        leetcode/remove_element.c
        leetcode/remove_leaf_nodes.c
        leetcode/remove_nth_form_end.c
        leetcode/reverse_k_group.c
        leetcode/right_side_view.c
        leetcode/rob.c
        leetcode/roman_to_int.c
        leetcode/rotate.c
        leetcode/search.c
        leetcode/search_BST.c
        leetcode/search_insert.c
        leetcode/search_range.c
        leetcode/smallest_from_leaf.c
        leetcode/solve_sudoku.c
        leetcode/solve_sudoku2.c
        leetcode/sorted_array_to_BST.c
        leetcode/str_str.c
        leetcode/subtree_with_all_deepest.c
        leetcode/sum_even_grandparent.c
        leetcode/sum_numbers.cpp
        leetcode/sum_of_distances_in_tree.c
        leetcode/sum_of_left_leaves.c
        leetcode/sum_root_to_leaf.c
        leetcode/swap_pairs.c
        leetcode/test_map.c
        leetcode/three_sum.c
        leetcode/three_sum2.c
        leetcode/three_sum_closest.c
        leetcode/trap.c
        leetcode/trap2.c
        leetcode/tree_2_str.c
        leetcode/tree_serialize.c
        leetcode/trim_BST.c
        leetcode/unique_paths.c
        leetcode/width_of_binary_tree.c
        leetcode/zigzag_level_order.c
        test/find_different.c
        test/test_fork.c
        test/test_socket.c
        test/test_thread.c
        utils/boyer_moore.c
        utils/dichotomy.c
        utils/hash_map.c
        utils/heap_sort.c
        utils/KMP.c
        utils/quick_sort.c
        utils/segment_tree.c
        utils/skip_list.c
        utils/sunday.c
        utils/trie.c
        utils/utils.c)
